--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,3 @@
-backports.functools-lru-cache==1.5
-binwalk==2.1.1
-Brlapi==0.6.4
-chardet==2.3.0
-cheroot==6.4.0
-CherryPy==17.3.0
-click==6.7
-contextlib2==0.5.5
-crcelk==1.1
-cupshelpers==1.0
-cycler==0.10.0
-debtags==2.1
-decorator==4.0.6
-Flask==1.0.2
-hashID==3.1.4
-itsdangerous==0.24
-jaraco.functools==1.20
-Jinja2==2.10
-louis==2.6.5
-MarkupSafe==1.0
-matplotlib==1.5.2rc2
-more-itertools==4.3.0
-numpy==1.11.1rc1
-Pillow==3.3.0
-portend==2.3
-pyasn1==0.1.9
-pycups==1.9.73
-pygobject==3.20.1
-PyOpenGL==3.1.0
-pyparsing==2.1.8
-pyqtgraph==0.9.10
-pyserial==3.1
-pysmbc==1.0.15.5
-pyTelegramBotAPI==3.6.5
-python-apt==1.1.0b4
-python-dateutil==2.4.2
-python-debian==0.1.29
-pytz==2015.7
-pyxdg==0.25
-requests==2.7.0
-scipy==0.17.1
-six==1.11.0
-smoke-zephyr==1.0.2
-tempora==1.13
-termineter==0.2.6
-urllib3==1.15.1
-Werkzeug==0.14.1
-zc.lockfile==1.3.0
+pyTelegramBotAPI
+flask
+logging
